--- a/styles/style.css
+++ b/styles/style.css
@@ -335,6 +335,6 @@
 
   .select-container {
 	display: flex;
-	justify-content: space-around; 
+	justify-content: space-between; 
 	align-items: center;
   }
